[package]
name = "ecdh_wrapper"
version = "0.0.4"
authors = ["David Stainton <dstainton415@gmail.com>"]
description = "ECDH wrapper library, currently wrapping sodiumoxide."
homepage = "https://github.com/applied-mixnetworks/ecdh_wrapper"
repository = "https://github.com/applied-mixnetworks/ecdh_wrapper"
documentation = "https://docs.rs/ecdh_wrapper/"
readme = "README.md"
keywords = ["cryptography", "ecdh"]
license = "AGPL-3.0-only"

[dependencies]
x25519-dalek = "=0.2.1"
rand = "^0.4.2"

[dev-dependencies]
rand = "^0.4.2"
